# simple_python_package

./: .gitignore  README.md  pyproject.toml  python_package_setup.md
.github/workflows/: python-package.yml
src/bye_app/: bye_main.py
src/hello_app/: hello_main.py
tests/: test_bye_app.py  test_hello_app.py
